@@ -1,5 +1,5 @@
-.DS_Store
 Authors.txt
+FilesTouched.txt
 GPL.txt
 History.txt
 Manifest.txt
