@@ -1,5 +1,6 @@
 - Get the erlang adaptor to handle hashes
 - Add error checking to the rulang server for things like servers already running on a port. 
-- Build more tests, specifically the standard CRUD and a few join queries. 
-- Make it possible to specify where to create the mnesia database file. 
-- Make it possible to specify where the beam file is compiled to.
+- Build more tests, specifically the standard CRUD and a few join queries.
+- database.yml should say where beam/mnesia live
+- make record files importable (via rr command)
+- make sure when we start mnesia it's not just running over an old mnesia instance.
